@@ -1,10 +1,7 @@
 package de.uol.pgdoener.th1.business.infrastructure.analyzeTable.finder;
 
 import de.uol.pgdoener.th1.business.dto.TransposeMatrixReportDto;
-import de.uol.pgdoener.th1.business.infrastructure.analyzeTable.core.CellInfo;
-import de.uol.pgdoener.th1.business.infrastructure.analyzeTable.core.ColumnInfo;
-import de.uol.pgdoener.th1.business.infrastructure.analyzeTable.core.MatrixInfo;
-import de.uol.pgdoener.th1.business.infrastructure.analyzeTable.core.RowInfo;
+import de.uol.pgdoener.th1.business.infrastructure.analyzeTable.core.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -16,23 +13,17 @@ import java.util.Optional;
 @RequiredArgsConstructor
 public class FindTransposedMatrixService {
 
+    private final CellInfoService cellInfoService;
+
     /**
      * Detects if the provided matrix is likely a transposed table.
      * A transposed matrix typically has string labels in the first column,
      * numeric values across the first row, and more columns than rows.
      *
      * @param matrixInfo metadata structure (not used directly here but available)
-     * @param matrix     the raw matrix data
      * @return an Optional containing a TransposedMatrixReportDto if the structure matches
      */
-    public Optional<TransposeMatrixReportDto> find(MatrixInfo matrixInfo, String[][] matrix) {
-        if (isEmpty(matrixInfo)) return Optional.empty();
-
-        int rowCount = matrixInfo.rowInfos().size();
-        int columnCount = matrixInfo.columnInfos().size();
-
-        if (!hasTransposedShape(rowCount, columnCount)) return Optional.empty();
-
+    public Optional<TransposeMatrixReportDto> find(MatrixInfo matrixInfo) {
         double labelRatio = calculateLabelRatioInFirstColumn(matrixInfo);
         double numberRatio = calculateNumberRatioInFirstRow(matrixInfo);
 
@@ -48,29 +39,14 @@ public class FindTransposedMatrixService {
     }
 
     /**
-     * Checks whether the matrix is empty or malformed.
-     */
-    private boolean isEmpty(String[][] matrix) {
-        return matrix == null || matrix.length == 0 || matrix[0].length == 0;
-    }
-
-    /**
-     * Checks if the matrix shape is more typical of a transposed matrix
-     * (more columns than rows).
-     */
-    private boolean hasTransposedShape(int rowCount, int columnCount) {
-        return columnCount > rowCount;
-    }
-
-    /**
      * Calculates the proportion of label-like strings in the first column (excluding header).
      */
     private double calculateLabelRatioInFirstColumn(MatrixInfo matrixInfo) {
-        ColumnInfo firstColumn = matrixInfo.columnInfos().get(0);
+        ColumnInfo firstColumn = matrixInfo.columnInfos().getFirst();
         int labelCount = 0;
-        int total = firstColumn.cellInfos().size() - 1; // ohne Header
+        int total = firstColumn.cellInfos().size();
 
-        for (int i = 1; i < firstColumn.cellInfos().size(); i++) {
+        for (int i = 0; i < firstColumn.cellInfos().size(); i++) {
             CellInfo cell = firstColumn.cellInfos().get(i);
             if (isLikelyLabel(cell)) {
                 labelCount++;
@@ -84,11 +60,11 @@ public class FindTransposedMatrixService {
      * Calculates the proportion of numeric-looking values in the first row (excluding header).
      */
     private double calculateNumberRatioInFirstRow(MatrixInfo matrixInfo) {
-        RowInfo firstRow = matrixInfo.rowInfos().get(0);
+        RowInfo firstRow = matrixInfo.rowInfos().getFirst();
         int numberCount = 0;
-        int total = firstRow.cellInfos().size() - 1;
+        int total = firstRow.cellInfos().size();
 
-        for (int i = 1; i < firstRow.cellInfos().size(); i++) {
+        for (int i = 0; i < firstRow.cellInfos().size(); i++) {
             CellInfo cell = firstRow.cellInfos().get(i);
             if (isNumber(cell)) {
                 numberCount++;
@@ -101,7 +77,7 @@ public class FindTransposedMatrixService {
     /**
      * Checks if a string looks like a label (non-empty and not a number).
      */
-    private boolean isLikelyLabel(String value) {
+    private boolean isLikelyLabel(CellInfo cell) {
         return cellInfoService.isString(cell);
     }
 
@@ -109,15 +85,7 @@ public class FindTransposedMatrixService {
      * Checks if a string can be interpreted as a number.
      * German number format is supported (dot as thousand separator, comma as decimal).
      */
-    private boolean isNumber(String value) {
-        if (value == null || value.isBlank()) return false;
-
-        try {
-            String normalized = value.replace(".", "").replace(",", ".").trim();
-            Double.parseDouble(normalized);
-            return true;
-        } catch (NumberFormatException e) {
-            return false;
-        }
+    private boolean isNumber(CellInfo cell) {
+        return cell.valueType() == ValueType.NUMBER;
     }
 }
